activity layout done!

--- a/app/src/main/res/drawable-v24/rounded_shape_symbols.xml
+++ b/app/src/main/res/drawable-v24/rounded_shape_symbols.xml
@@ -3,9 +3,7 @@
     xmlns:android="http://schemas.android.com/apk/res/android"
     android:shape="oval"   >
 
-    <solid
-        android:color="#000" >
-    </solid>
-    
+    <solid android:color="#F8F8F8"/>
+    <corners android:radius="20dp" />
 
 </shape>
