--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -57,14 +57,41 @@
                 />
         </HorizontalScrollView>
     </LinearLayout>
-
     <LinearLayout
+        android:id="@+id/lyNextOperation"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:weightSum="5"
         android:orientation="vertical"
         android:background="#FFFFFF"
         android:layout_gravity="center_horizontal"
+        android:visibility="gone"
+        android:gravity="center"
+        >
+        <Button
+            android:id="@+id/btnNextOperation"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="Next Operation"
+            android:textAllCaps="false"
+            android:padding="20dp"
+            android:elevation="10dp"
+            style="@style/AppTheme.RoundedCornerMaterialButton"
+            android:onClick="nextOperation">
+
+        </Button>
+
+    </LinearLayout>
+
+    <LinearLayout
+        android:id="@+id/lyAllButtons"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:weightSum="5"
+        android:orientation="vertical"
+        android:background="#FFFFFF"
+        android:layout_gravity="center_horizontal"
+        android:visibility="visible"
         >
         <LinearLayout
             android:layout_marginTop="15dp"
